2011-04-19 John Wu <John dot Wu at ACM dot org>
	* src/part.cpp: change part::buildIndexes and
	part::purgeIndexFiles from using writeLock to using readLock

2011-04-18 John Wu <John dot Wu at ACM dot org>
	* src/fileManager.cpp:955 add variable evt to make the log
	message more uniform in function fileManager::tryGetFile

2011-04-07 John Wu <John dot Wu at ACM dot org>
	* tests/Makefile.am: update test case 2 of check-ibis to match the
	changes in printing formats in examples/ibis.cpp
	* examples/ibis.cpp, examples/ardea.cpp: add calls to buildIndexes
	before performinging queries in an attempt to reproduce the
	problem reported by Chavdar Kopoev
	* src/part.cpp, src/mensa.cpp: change mensa::buildIndexes to call
	part::buildIndexes and part::buildIndexes to always use
	ibis_part_build_indexes, only rebuild indexes in
	ibis_part_build_indexes if the number of rows has doubled
	* src/column.cpp: add call ibis::fileManager::flushFile before
	removing files in ibis::column::purgeIndexFile (likely the real
	cause of the deadlock reported by Chavdar Kopeov)
	* src/ixzona.cpp:77 replace nc+1 with end to address the problem
	with test case 166 of match-counts (a change required by
	2010-11-03 modification to array_t)

2011-04-06 John Wu <John dot Wu at ACM dot org>
	* src/column.h, src/column.cpp: add function
	ibis::column::indexedRows to report the number of rows in the
	index associated with the column
	* src/part.cpp: update function ibis_part_build_indexes to make
	sure the new indexes have the same number of rows as the data
	partition (at the request of Chavdar Kopoev)
	* src/i*.cpp: catch up with the 2010-11-03 change to the
	constructor of array_t that takes a pointer to storage object.
	These errors causes the indexes to be regenerated incorrectly when
	the whole index is read into memory

2011-04-05 John Wu <John dot Wu at ACM dot org>
	* src/index.cpp: change the 4th argument to ibis::index::create
	from inEntirety to readopt, change the interpretation of the