@@ -1,6 +1,6 @@
 *** Copyright Notice ***
 
-FastBit Copyright (c) 2007-2010, The Regents of the University of California,
+FastBit Copyright (c) 2007-2011, The Regents of the University of California,
 through Lawrence Berkeley National Laboratory (subject to receipt of any
 required approvals from the U.S. Dept. of Energy).  All rights reserved.
 
