@@ -2,7 +2,7 @@
 
 # libtool - Provide generalized library-building support services.
 # Generated automatically by config.status (fastbit) ibis1.2.3.1
-# Libtool was configured on host doe6685565:
+# Libtool was configured on host bit.lbl.gov:
 # NOTE: Changes made to this file will be lost: look at ltmain.sh.
 #
 #   Copyright (C) 1996, 1997, 1998, 1999, 2000, 2001, 2003, 2004, 2005,
@@ -72,7 +72,7 @@ build=i386-apple-darwin10.7.0
 build_os=darwin10.7.0
 
 # A sed program that does not truncate output.
-SED="/usr/bin/sed"
+SED="/opt/local/bin/gsed"
 
 # Sed that helps us avoid accidentally triggering echo(1) options like -n.
 Xsed="$SED -e 1s/^X//"
@@ -161,7 +161,7 @@ lock_old_archive_extraction=yes
 LTCC="gcc"
 
 # LTCC compiler flags.
-LTCFLAGS=" -O2 -D_THREAD_SAFE  -I/Library/Java/Home/include"
+LTCFLAGS=" -g -D_THREAD_SAFE  -I/Library/Java/Home/include"
 
 # Take the output of nm and produce a listing of raw symbols and C names.
 global_symbol_pipe="sed -n -e 's/^.*[	 ]\\([BCDEGRST][BCDEGRST]*\\)[	 ][	 ]*_\\([_A-Za-z][_A-Za-z0-9]*\\)\$/\\1 _\\2 \\2/p' | sed '/ __gnu_lto/d'"
@@ -1279,7 +1279,7 @@ exec_cmd=
 # Append VALUE to the end of shell variable VAR.
 func_append ()
 {
-    eval "${1}+=\${2}"
+eval "${1}+=\${2}"
 } # Extended-shell func_append implementation
 
 # func_append_quoted var value
@@ -1295,7 +1295,7 @@ func_append_quoted ()
 # func_arith arithmetic-term...
 func_arith ()
 {
-    func_arith_result=$(( $* ))
+func_arith_result=$(( $* ))
 } # Extended-shell func_arith implementation
 
 
@@ -1303,7 +1303,7 @@ func_arith ()
 # STRING may not start with a hyphen.
 func_len ()
 {
-    func_len_result=${#1}
+func_len_result=${#1}
 } # Extended-shell func_len implementation
 
 
@@ -1320,7 +1320,7 @@ func_lo2o ()
 # func_xform libobj-or-source
 func_xform ()
 {
-    func_xform_result=${1%.*}.lo
+func_xform_result=${1%.*}.lo
 } # Extended-shell func_xform implementation
 
 
