@@ -65,13 +65,15 @@ public:
     virtual void print(std::ostream& out) const; ///< Print header info.
 
     const column* IDColumnForKeywordIndex() const;
+    const void TDListForKeywordIndex(std::string&) const;
+    const void delimitersForKeywordIndex(std::string&) const;
 
     /// A tokenizer class to turn a string buffer into tokens.  Used by
     /// ibis::keywords to build a term-document index.
     struct tokenizer {
 	/// A tokenizer must implement a two-argument operator().  It takes
-	/// a input string in buf to produce a list of tokens in tkns.  The
-	/// input buffer may be modified to in this function.  The return
+	/// an input string in buf to produce a list of tokens in tkns.  The
+	/// input buffer may be modified in this function.  The return
 	/// value shall be zero (0) to indicate success, and a positive
 	/// value to carray a warning message and a negative value to
 	/// indicate fatal error.
