@@ -13,10 +13,10 @@
 #include <string.h>	// strlen, strchr
 
 /// Constructor.  It first tries to read the terms (@c .terms) and the
-/// tdmat (@c .idx) files if they both exist.  If that fails, it tries to
-/// read the tdlist (@c .tdlist) file generated by another program and 
-ibis::keywords::keywords(const ibis::column* c,
-			 const ibis::column* idcol, const char* f)
+/// tdmat (@c .idx) files if they both exist.  If that fails, it will
+/// attempt to build an index using the externally provided term-document
+/// list or parsing the text with a specified list of delimiters.
+ibis::keywords::keywords(const ibis::column* c, const char* f)
     : ibis::index(c) {
     if (c == 0) return; // does nothing
     if (c->type() != ibis::CATEGORY &&
@@ -27,6 +27,7 @@ ibis::keywords::keywords(const ibis::column* c,
 	throw ibis::bad_alloc("wrong column type for ibis::keywords");
     }
 
+    int ierr;
     // try to read an existing term-document matrix
     std::string fdic, fmat;
     dataFileName(f, fdic);
@@ -35,56 +36,22 @@ ibis::keywords::keywords(const ibis::column* c,
     fmat += ".idx";
     if (ibis::util::getFileSize(fdic.c_str()) > 0 &&
 	ibis::util::getFileSize(fmat.c_str()) > 0) {
-	read(f);
-	if (ibis::gVerbose > 4) {
-	    ibis::util::logger lg;
-	    print(lg());
+	ierr = read(f);
+	if (ierr >= 0) {
+	    if (ibis::gVerbose > 4) {
+		ibis::util::logger lg;
+		print(lg());
+	    }
+	    return;
 	}
-	return;
     }
 
-    if (idcol == 0) {
-	std::string delim;
-	const char *spec = col->indexSpec();
-	if (spec != 0 && *spec != 0) {
-	    const char *tmp = strstr(spec, "delimiters");
-	    if (tmp == 0) {
-		tmp = strstr(spec, "Delimiters");
-		if (tmp == 0) {
-		    tmp = strstr(spec, "delim");
-		    if (tmp == 0) {
-			tmp = strstr(spec, "Delim");
-			if (tmp != 0)
-			    tmp += 5;
-		    }
-		    else {
-			tmp += 5;
-		    }
-		}
-		else {
-		    tmp += 10;
-		}
-	    }
-	    else {
-		tmp += 10;
-	    }
-	    if (tmp != 0) {
-		tmp += strspn(tmp, " \t=");
-		ibis::util::readString(delim, tmp);
-	    }
-	}
-	ibis::keywords::tokenizer tkn(delim.c_str());
-	int ierr = parseTextFile(tkn, f);
-	if (ierr < 0) {
-	    LOGGER(ibis::gVerbose >= 0)
-		<< "Warning -- keywords::keywords failed to parse text file "
-		"to build a keyword index, parseTextFile returned " << ierr;
-	    throw ibis::bad_alloc("keywords::ctr failed to parse text file");
-	}
-    }
-    else {
-	// need to read a tdlist file generated externally, first check that id
+    reinterpret_cast<const ibis::text*>(c)->TDListForKeywordIndex(fdic);
+    if (! fdic.empty()) {
+	// read a tdlist file generated externally, first check that id
 	// column is a valid one
+	const ibis::column* idcol =
+	    reinterpret_cast<const ibis::text*>(c)->IDColumnForKeywordIndex();
 	if (idcol->type() != ibis::INT &&
 	    idcol->type() != ibis::UINT) {
 	    LOGGER(ibis::gVerbose >= 0)
@@ -93,9 +60,7 @@ ibis::keywords::keywords(const ibis::column* c,
 	    throw ibis::bad_alloc("keywords can only use 4-byte "
 				  "integers as ids");
 	}
-	fmat.erase(fmat.size()-3);
-	fmat += "tdlist";
-	int ierr = readTermDocFile(idcol, fmat.c_str());
+	int ierr = readTermDocFile(idcol, fdic.c_str());
 	if (ierr == -1 && f != 0 && *f != 0)
 	    ierr = readTermDocFile(idcol, f);
 	if (ierr < 0) {
@@ -105,16 +70,59 @@ ibis::keywords::keywords(const ibis::column* c,
 	    throw ibis::bad_alloc("keywords::ctor failed to read tdlist file");
 	}
     }
+    else {
+	std::string delim;
+	reinterpret_cast<const ibis::text*>(c)->
+	    delimitersForKeywordIndex(delim);
+	fmat.erase(fmat.size()-3);
+	fmat += "tdlist";
+	if (delim.empty() && ibis::util::getFileSize(fmat.c_str()) > 0) {
+	    // read a tdlist file generated externally, first check that id
+	    // column is a valid one
+	    const ibis::column* idcol =
+		reinterpret_cast<const ibis::text*>(c)->
+		IDColumnForKeywordIndex();
+	    if (idcol->type() != ibis::INT &&
+		idcol->type() != ibis::UINT) {
+		LOGGER(ibis::gVerbose >= 0)
+		    << "Warning -- keywords::keywords -- the id column of "
+		    "keywords can only be 4-byte integers";
+		throw ibis::bad_alloc("keywords can only use 4-byte "
+				      "integers as ids");
+	    }
+	    ierr = readTermDocFile(idcol, fmat.c_str());
+	    if (ierr < 0) {
+		LOGGER(ibis::gVerbose >= 0)
+		    << "Warning -- keywords::keywords -- readTermDocFile "
+		    "failed with error code " << ierr;
+		throw ibis::bad_alloc("keywords::ctor failed to read tdlist "
+				      "file");
+	    }
+	}
+	else {
+	    ibis::keywords::tokenizer tkn(delim.c_str());
+	    int ierr = parseTextFile(tkn, f);
+	    if (ierr < 0) {
+		LOGGER(ibis::gVerbose >= 0)
+		    << "Warning -- keywords::keywords failed to parse text "
+		    "file to build a keyword index, parseTextFile returned "
+		    << ierr;
+		throw ibis::bad_alloc("keywords::ctr failed to parse text");
+	    }
+	}
+    }
 
     optionalUnpack(bits, col->indexSpec());
-    write(f);
-    if (ibis::gVerbose > 4) {
+    //write(f);
+    if (ibis::gVerbose > 6) {
 	ibis::util::logger lg;
+	lg() << "keywords::ctor completed constructing a new index\n";
 	print(lg());
     }
 } // ibis::keywords::keywords
 
-/// Constructor.  Construct a keyword index using the user-provided tokenizer.
+/// Constructor.  Construct a new keyword index using the user-provided
+/// tokenizer.
 ibis::keywords::keywords(const ibis::column *c, ibis::text::tokenizer &tkn,
 			 const char *f) : ibis::index(c) {
     if (c == 0) return;
@@ -122,9 +130,10 @@ ibis::keywords::keywords(const ibis::column *c, ibis::text::tokenizer &tkn,
     int ierr = parseTextFile(tkn, f);
     if (ierr >= 0) {
 	optionalUnpack(bits, col->indexSpec());
-	write(f);
-	if (ibis::gVerbose > 4) {
+	//write(f);
+	if (ibis::gVerbose > 6) {
 	    ibis::util::logger lg;
+	    lg() << "keywords::ctor completed constructing a new index\n";
 	    print(lg());
 	}
     }
@@ -136,7 +145,7 @@ ibis::keywords::keywords(const ibis::column *c, ibis::text::tokenizer &tkn,
     }
 } // ibis::keywords::keywords
 
-/// Constructor.  Construct a keyword index from an existing file.
+/// Constructor.  Reconstruct a keyword index from an existing file.
 ibis::keywords::keywords(const ibis::column* c, ibis::fileManager::storage* st)
     : ibis::index(c, st) {
     read(st);
@@ -147,13 +156,20 @@ ibis::keywords::keywords(const ibis::column* c, ibis::fileManager::storage* st)
 /// indicate error.
 int ibis::keywords::readTermDocFile(const ibis::column* idcol, const char* f) {
     int ierr = 0;
+    if (col == 0 || col->partition() == 0) return -1;
 
     std::ifstream tdf(f);
+    if ((! tdf) && col->partition()->currentDataDir() != 0) {
+	std::string fullname = col->partition()->currentDataDir();
+	fullname += FASTBIT_DIRSEP;
+	fullname += f;
+	tdf.open(fullname.c_str());
+    }
     if (! tdf) {
 	LOGGER(ibis::gVerbose > 2)
 	    << "keywords::readTermDocFile -- failed to open \""
 	    << f << "\" for reading";
-	return -1;
+	return -2;
     }
 
     ibis::fileManager::buffer<char> mybuf;
@@ -163,7 +179,7 @@ int ibis::keywords::readTermDocFile(const ibis::column* idcol, const char* f) {
 	LOGGER(ibis::gVerbose > 1)
 	    << "keywords::readTermDocFile(" << f
 	    << ") -- failed to acquire a buffer to reading";
-	return -2;
+	return -3;
     }
     nrows = col->partition()->nRows();
     size_t jline = 0;
